// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the <GifGrid /> component. Should render items when useFetchGifs get images. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInLeft"
  >
    gorillaz
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="123-a-456"
      key="123-a-456"
      title="a sad gif"
      url="rodwyn.com/sad.gif"
    />
    <GifGridItem
      id="123-a-457"
      key="123-a-457"
      title="a happy gif"
      url="rodwyn.com/happy.gif"
    />
  </div>
</Fragment>
`;

exports[`Testing the <GifGrid /> component. Should render the component correctly. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounceInLeft"
  >
    gorillaz
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
